# goit-ds-hw-02

./: create_db.py  pyproject.toml  seed.py  tables.sql  tasks.db
